<resources>
    <string name="app_name">Muti Campi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">INICIO</string>
    <string name="menu_inicio2">INICIO</string>
    <string name="menu_cori">CORI</string>
    <string name="menu_cale">CALE</string>
    <string name="menu_cobi">COBI</string>
    <string name="menu_cjur">CJUR</string>
    <string name="menu_cmal">CMAL</string>
    <string name="menu_citb">CITB</string>
    <string name="menu_sobre">SOBRE</string>
    <string name="menu_logar">logar</string>
    <string name="menu_sair">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_dicente">dicente</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_dicente_principal">DicentePrincipal</string>
    <string name="menu_segudario">outros</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="comprovante_de_vacina">vacinaçao</string>
    <string name="enviar">enviar</string>
</resources>